deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1
  namespace: app
spec:
  selector:
    app: app-1
  ports:
    - name: http
      protocol: TCP
      port: 80
  type: NodePort
