deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-1
  namespace: app
spec:
  rules:
  - host: app-1.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-1
            port:
              number: 80
